--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,5 @@
 @import "base/base.scss";
+@import "base/reset.scss";
 @import "utilities/variables.scss";
 @import "layout/containers.scss";
 @import "layout/header.scss";
