--- a/scss/partials/layout/_containers.scss
+++ b/scss/partials/layout/_containers.scss
@@ -25,7 +25,7 @@
 //  Banner
 
 .background-img {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url("../img/notes.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url("../imgs/notes.jpg");
     background-size: 100% 100%;
     height: 700px;
     }
