--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,9 +1,9 @@
-@import "base/base.scss";
-@import "base/reset.scss";
-@import "utilities/variables.scss";
-@import "layout/containers.scss";
-@import "layout/header.scss";
-@import "layout/footer.scss";
-@import "components/buttons.scss";
-@import "components/icons.scss";
-@import "layout/media-queries.scss";
+@import "partials/base/reset",
+        "partials/base/base-styles",
+        "partials/utilities/variables",
+        "partials/utilities/media-queries",
+        "partials/components/buttons",
+        "partials/components/icons",
+        "partials/layout/containers",
+        "partials/layout/header",
+        "partials/layout/footer";
