--- a/scss/partials/layout/_containers.scss
+++ b/scss/partials/layout/_containers.scss
@@ -14,7 +14,6 @@
         display:flex;
         flex-direction: row;
         flex-wrap: wrap;
-        width: 200px;
     }
 
     h1{
@@ -37,7 +36,7 @@
     }
 }
 
-//  Banner
+//  Banner/showcase
 
 .background-img {
     background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url("../imgs/notes.jpg");
@@ -54,10 +53,15 @@
     color: white;
     text-transform: uppercase;
 
+    h1 {
+        border-bottom: white 3px solid;
+        font-size: 80px;
+        padding-bottom: 20px;
+    }
+
     h2 {
         padding-bottom: 10px;
-        border-bottom: white 3px solid;
-        width: 200px;
+        font-size: 55px;
     }
 
     a {
@@ -156,7 +160,7 @@
     justify-content: space-between;
     margin-bottom: 10px;
 
-    .services {
+    .card{
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -164,8 +168,18 @@
         border: solid 1px black;
         width: 350px;
         height: 300px;
-        margin-right: 10px;
         margin-bottom: 40px;
+
+        @media screen and (min-width: 992px) {     
+            width: 450px;
+        }
+
+        @media screen and (min-width: 1260px) {
+            width: 550px;
+        }
+    }
+
+    .services {
         background-image: url("../imgs/srvc-background.jpg");
 
         h4 {
@@ -186,16 +200,8 @@
         }
     }
 
+
     .offices {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        border: solid 1px black;
-        width: 350px;
-        height: 300px;
-        margin-right: 10px;
-        margin-bottom: 40px;
         background-image: url("../imgs/offices-background.jpg");
 
         h4 {
@@ -233,7 +239,6 @@
     
     p {
         color: white;
-        width: 600px;
     }
 
     a {
