Made header sticky, changed the file structure for the pages to make them more compact and organised and started work on the services page. The first two services have been added and are fully responsive.

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,4 +6,5 @@
         "partials/components/icons",
         "partials/layout/containers",
         "partials/layout/header",
-        "partials/layout/footer";
+        "partials/layout/footer",
+        "partials/layout/services";
