--- a/css/style.css
+++ b/css/style.css
@@ -419,12 +419,36 @@ ul, ol {
   border: none;
   letter-spacing: .4px; }
 
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px; }
+
 p {
   width: 100%; }
 
 a {
   text-decoration: none;
   color: inherit; }
+
+hr.styled {
+  border: 0;
+  height: 1px;
+  background: #333;
+  background-image: linear-gradient(to right, #ccc, #333, #ccc); }
+
+hr.styled-small {
+  border: 0;
+  height: 1px;
+  background: #333;
+  background-image: linear-gradient(to right, #ccc, #333, #ccc);
+  width: 10px; }
+
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%; }
 
 @media screen and (min-width: 768px) {
   .media {
@@ -504,11 +528,53 @@ a {
 header {
   height: 75px;
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)) black;
-  opacity: 0.85; }
+  opacity: 0.90; }
 
 footer {
   height: 100px;
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)) black;
   opacity: 0.85; }
+
+.services-content .title {
+  text-align: center; }
+  .services-content .title h1 {
+    margin-top: 6rem;
+    color: #333;
+    font-weight: bold; }
+.services-content hr.styled {
+  width: 10%;
+  margin-top: -10px; }
+.services-content .services {
+  width: calc(100% - 2rem);
+  margin: 1rem auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: 1rem; }
+  .services-content .services .service {
+    padding: 0 1rem;
+    margin: 1rem 0;
+    width: 100%;
+    border: 1px solid black;
+    text-align: center;
+    font-size: 1.2rem;
+    /*
+    @media screen and (min-width: 900px) {
+        width: 49%;
+        display: inline-block;
+        margin: 0;
+        height: 100%;
+    }
+    */ }
+    .services-content .services .service hr.styled {
+      width: 150px; }
+    .services-content .services .service p:last-child {
+      font-weight: bold;
+      font-size: 1.5rem; }
+  @media screen and (min-width: 1200px) {
+    .services-content .services {
+      width: 80%; } }
+  @media screen and (min-width: 1400px) {
+    .services-content .services {
+      width: 60%; } }
 
 /*# sourceMappingURL=style.css.map */
